--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -9,9 +9,7 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
+          <%= link_to 'Blog App', root_path, class:"nav-link"%>
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
