--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -7,7 +7,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <%= link_to 'About Us', home_about_path, class:"nav-link"%>
+          <%= link_to 'New Blog', new_blog_path, class:"nav-link"%>
+          <%= link_to 'Blogs', blogs_path, class:"nav-link"%>
         </ul>
+        
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
