--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -2,27 +2,27 @@
 
 <h1>Blogs</h1>
 
-<table>
+<table class="table table-success table-striped table-hover">
   <thead>
     <tr>
-      <th>Title</th>
+      <th >Title</th>
       <th>Content</th>
       <th>Author</th>
       <th>Social</th>
-      <th colspan="3"></th>
+      <th colspan="4"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @blogs.each do |blog| %>
       <tr>
-        <td><%= blog.title %></td>
+        <td ><%= blog.title %></td>
         <td><%= blog.content %></td>
         <td><%= blog.author %></td>
         <td><%= blog.social %></td>
-        <td><%= link_to 'Show', blog %></td>
-        <td><%= link_to 'Edit', edit_blog_path(blog) %></td>
-        <td><%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', blog, class:"btn btn-light" %></td>
+        <td><%= link_to 'Edit', edit_blog_path(blog), class:"btn btn-light" %></td>
+        <td><%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-light" %></td>
       </tr>
     <% end %>
   </tbody>
@@ -30,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New Blog', new_blog_path %>
+<%= link_to 'New Blog', new_blog_path, class:"btn btn-light" %>
