--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -20,5 +20,5 @@
   <%= @blog.social %>
 </p>
 
-<%= link_to 'Edit', edit_blog_path(@blog) %> |
-<%= link_to 'Back', blogs_path %>
+<%= link_to 'Edit', edit_blog_path(@blog), class:"btn btn-light" %> 
+<%= link_to 'Back', blogs_path, class:"btn btn-light" %>
