Style the show blogs page

--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,4 +1,8 @@
-<p id="notice"><%= notice %></p>
+<br>
+<br>
+<div  class="jumbotron">
+  <h1><%= @blog.title %></h1>
+  <p id="notice"><%= notice %></p>
 
 <p>
   <strong>Title:</strong>
@@ -20,5 +24,12 @@
   <%= @blog.social %>
 </p>
 
-<%= link_to 'Edit', edit_blog_path(@blog), class:"btn btn-light" %> 
-<%= link_to 'Back', blogs_path, class:"btn btn-light" %>
+<%= link_to 'Edit', edit_blog_path(@blog), class:"btn btn-primary" %> 
+<%= link_to 'Back', blogs_path, class:"btn btn-primary" %>
+  
+
+
+
+
+
+
