--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,16 +1,11 @@
+<p id="notice"><%= notice %></p>
 <br>
 <br>
 <div  class="jumbotron">
+<div class="container">
   <h1><%= @blog.title %></h1>
-  <p id="notice"><%= notice %></p>
-
+  
 <p>
-  <strong>Title:</strong>
-  <%= @blog.title %>
-</p>
-
-<p>
-  <strong>Content:</strong>
   <%= @blog.content %>
 </p>
 
@@ -20,13 +15,13 @@
 </p>
 
 <p>
-  <strong>Social:</strong>
   <%= @blog.social %>
 </p>
 
-<%= link_to 'Edit', edit_blog_path(@blog), class:"btn btn-primary" %> 
-<%= link_to 'Back', blogs_path, class:"btn btn-primary" %>
-  
+<%= link_to 'Edit', edit_blog_path(@blog), class:"btn btn-outline-success" %> 
+<%= link_to 'Back', blogs_path, class:"btn btn-outline-success" %>
+</div>
+</div>
 
 
 
