--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -20,9 +20,9 @@
         <td><%= blog.content %></td>
         <td><%= blog.author %></td>
         <td><%= blog.social %></td>
-        <td><%= link_to 'Show', blog, class:"btn btn-light" %></td>
-        <td><%= link_to 'Edit', edit_blog_path(blog), class:"btn btn-light" %></td>
-        <td><%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-light" %></td>
+        <td><%= link_to 'Show', blog, class:"btn btn-outline-success" %></td>
+        <td><%= link_to 'Edit', edit_blog_path(blog), class:"btn btn-outline-success" %></td>
+        <td><%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-outline-success" %></td>
       </tr>
     <% end %>
   </tbody>
@@ -30,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New Blog', new_blog_path, class:"btn btn-light" %>
+<%= link_to 'New Blog', new_blog_path, class:"btn btn-outline-success" %>
